cluster/apps/default/photoprism/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  ports:
    - port: 2342
  selector:
    app.kubernetes.io/name: photoprism
