cluster/apps/default/photoprism/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism
spec:
  rules:
    - host: photoprism.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: photoprism
                port:
                  number: 2342
  tls:
    - hosts:
        - photoprism.${SECRET_PUBLIC_DOMAIN}
